banner overlap issue fixed

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -186,7 +186,7 @@
     align-items: center;
     text-align: center;
     width:100%;
-    max-height: 100vh;
+    /* max-height: 100vh; */
 }
 .bannercontents{
     color: var(--tertiary-color);
